# jb-shell

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  style.css
src/: bar.rs  google_calendar.rs  hyprland_listener.rs  main.rs  notification_daemon.rs  summary_thread.rs  workspace_capture.rs
src/widgets/: active_window.rs  battery.rs  calendar.rs  clock.rs  gcloud_config.rs  kube_context.rs  launcher.rs  mod.rs  mpris.rs  network.rs  notification_center.rs  notifications.rs  switcher.rs  volume.rs  workspaces.rs
widgets/: active_window.py  bar.py  battery.py  clock.py  kube_context.py  network.py  volume.py  workspaces.py
