[package]
name = "jb-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.10"
gtk4-layer-shell = "0.7"
glib = "0.21"
gdk4 = "0.10"
gio = "0.21"
chrono = "0.4"
battery = "0.7"
hyprland = "0.4.0-beta.3"
relm4 = "0.10"
wayland-client = "0.31"
wayland-protocols-hyprland = { version = "1.1.0", features = ["client"] }
memfd = "0.6"
google-calendar3 = "6"
tokio = { version = "1", features = ["rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["blocking-api", "tokio"] }
rusqlite = { version = "0.33", features = ["bundled"] }
async-openai = "0.27"
